Bug 676001 - Fix for stroke hit testing on cairo. r=jrmuizel

The mochitest was mostly written by Jonathan Watt (bug 719385).